2006-03-28  Kaz Kojima  <kkojima@gcc.gnu.org>

	* config/sh/sh.md (udivsi3_i4_int): Clobber MACH_REG and MACL_REG.
	(divsi3_i4_int): Likewise.

2006-03-28  Roger Sayle   <roger@eyesopen.com>

	* expr.c (emit_group_store): Only create a new pseudo reg if the
	quantity it needs to hold isn't already a suitable pseudo.

2006-03-28  Jeff Law  <law@redhat.com>

	* timevar.def (TV_TREE_PHI_CPROP): New timevar.
	* tree-ssa-dom.c (pass_phi_only_cprop): Use it.

2006-03-28  Roger Sayle  <roger@eyesopen.com>

	* fold-const.c (fold_binary) <BIT_XOR_EXPR>: Fold (X & Y) ^ Y as
	the equivalent ~X & Y, and the symmetry related transformations.
	(fold_binary) <BIT_AND_EXPR>: Similarly, fold (X ^ Y) & Y as 
	~X & Y, and symmetry related transforms.

2006-03-28  Maxim Kuvyrkov  <mkuvyrkov@ispras.ru>

	Revert my 2006-03-27 patches.

2006-03-28  Roger Sayle  <roger@eyesopen.com>

	* fold-const.c (fold_unary) <NOP_EXPR>: Fold (T1)(~(T2)X) as
	~(T1)X, when T1 and T2 are integer types of the same precision
	and (T2)X isn't an extension.

2006-03-28  Jeff Law  <law@redhat.com>

	PR tree-optimization/26796
	* tree-ssa-dom.c (propagate_rhs_into_lhs): Queue blocks which
	need EH edge cleanups rather than purging them immediately.
	(eliminate_degenerate_phis): Handle queued EH cleanups.

2006-03-28  Daniel Berlin  <dberlin@dberlin.org>

	* tree-ssa-alias.c (create_sft): Initially inherit TREE_ADDRESSABLE
	from parent_var.

2006-03-27  Roger Sayle  <roger@eyesopen.com>

	PR middle-end/22524
	* fold-const.c (fold_binary) <MINUS_EXPR>: Call fold_convert to
	cast BIT_NOT_EXPR operand to the correct type.

2006-03-27  Sebastian Pop  <pop@cri.ensmp.fr>

	* tree-loop-linear.c: Don't include varray.h.
	(gather_interchange_stats, try_interchange_loops,
	linear_transform_loops): Use VEC instead of VARRAY.
	* lambda-mat.c: Don't include varray.h.
	* tree-chrec.c: Same.
	* lambda-trans.c: Same.
	* tree-vectorizer.c (new_loop_vec_info, destroy_loop_vec_info): Use
	VEC instead of VARRAY.